ToDoListApp/deployment-to-do-list.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
  namespace: my-app
spec:
  replicas: 1
  selector:
    matchLabels:
      component: app
  template:
    metadata:
      labels:
        component: app
    spec:
      containers:
      - name: todolist-app
        image:  todo-app
        imagePullPolicy: Never
        args: [/bin/sh, -c, 'python3 manage.py runserver 0.0.0.0:8000']
        resources:
          limits:
            memory: "128Mi"
            cpu: "100m"
        ports:
          - containerPort: 8000
        volumeMounts:
          - name: data-from-configmap
            mountPath: /var/test-configmap
            readOnly: true
      volumes:
        - name: data-from-configmap
          configMap: 
            name: my-config
