ToDoListApp/app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: app-svc
  namespace: my-app
spec:
  type: ClusterIP
  selector:
    component: app
  ports:
  - port: 8000
