ToDoListApp/postgres-service.yml
apiVersion: v1
kind: Service
metadata:
  name: db-svc
  namespace: my-app
spec:
  type: ClusterIP
  selector:
    component: postgres
  ports:
  - port: 5432
    protocol: TCP
