ToDoListApp/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/add-base-url: "true"
  labels:
    name: my-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: app.test
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: app-svc
            port: 
              number: 8000
